# Cmpl

./: .gitignore  CMakeLists.txt  Make.all.sh  Make.watcom.sh  Makefile  README.md  SciTEDirectory.properties  demo.html  demoGfx.html  demoOld.html  gx.desktop  stdlib.ci  test.abort.ci  test.all.ci  test.all.sh  test.ci  test.lang.ci  test.mingw.bat  test.stdc.ci  test.watcom.sh  wMake.sh
build-20231101/: tests.js
build-20231101/cmplFile/: test.base64.ci
build-20231101/cmplGfx/: Calculator.ci  fx.color.lookup-levels.ci  fx.color.lookup-lut3d.ci  fx.color.lookup-manual.ci  fx.histogram.ci  testGfx.ci
build-20231101/wasm/: cmpl.data
cc/: CMakeLists.txt  HelloWorld.cvx  Makefile  SciTEDirectory.properties  api.api  bugs.cvx  ccvm.properties  compiler.txt  iterate.cvx  iterate.files.cvx  lstd.cvx  lstd.cxx  main.cvx  main.cxx  psvm.g  stdlib.cvx  stdlib.xxx.cvx  string.cvx  test.Core.all.cvx  test.Core.malloc.cvx  test.Core.tracing.cvx  test.Lang.cvx  test.Lang.enum.cvx  test.Lang.function.cvx  test.Lang.null.cvx  test.Lang.typename.cvx  test.Lang.variant.cvx  test.Lstd.Date.cvx  test.Lstd.Math.cvx  test.Lstd.Random.cvx  test.Math.cvx  test.all.cmd  test.all.cvx  test.all.sh  test.asm.txt  test.base64.cvx  test.cvx  test.fixed.cvx  test.gl.cvx  test.glc  (+19 more)
cc/dll/: SciTEDirectory.properties
cc/extras/: Reference.outline  SciTEDirectory.properties  apiCreator.html  grammar.g
cc/extras/Grammar/: Grammar.g4  language.g4
cc/extras/Inspector/: Inspector.css  Inspector.html  Inspector.js  Inspector.ui.js
cc/extras/Reference/: 02. Type system.md  03. Lexical structure.md  04. Declarations.md  05. Statements.md  06. Library.md  Todo.md
cc/extras/Tools/: Inspector.css  Inspector.html  Inspector.js
cc/extras/Tools/jsLibs/: jsArgs.js  jsData.js
cc/extras/todos/: Inspector.cvx  Raytracer.cvx  SciTEDirectory.properties  test.parallel.cvx  testx.overflow.cvx  todo.Collections.cvx  todo.Functions.cvx  todo.Json.cvx  todo.Optimize.cvx  todo.Streams.cvx  todo.String.cvx
cc/src/: Makefile  api.h  ccCore.h  ccapi.h  ccstd.h  ccvm.c  ccvm.h  cgen.c  clex.c  clog.c  code.c  code.h  code.i  code.inl  core.c  core.err  core.h  decl.c  defs.i  defs.inl  expr.c  internal.h  lexer.c  libs.inl  lstd.c  main.c  main.cpp  main.h  node.h  objfw.c  parse.c  parser.c  plugin.c  plugin.h  printer.c  psvm.c  pvm.h  pvmc.c  pvmc.h  scan.c  (+5 more)
cc/src/dll/: SciTEDirectory.properties  gl.c  lbit.c
cc/src/incl/: Makefile.gcc  Makefile.wcc  defs.h  defs.inl  exec.c  exec.inl  libc.c  libc.inl  lstd.c  lvec.c  test.c  vm.h
cc/src/libs/: lbit.c  lvec.c
cc/test.gl/: SciTEDirectory.properties  gl.c  glapi.api  test0.cvx  test1.cvx  test2.cvx
cc/tests/: SciTEDirectory.properties  base64.dec.txt  base64.enc.txt  test.Core.all.cvx  test.Core.malloc.cvx  test.Core.qsort.cvx  test.Core.tracing.cvx  test.Lang.function.cvx  test.Lang.null.cvx  test.Lang.typename.cvx  test.Lang.variant.cvx  test.Lstd.Math.cvx  test.Lstd.Random.cvx  test.base64.cvx  test.fixed.cvx  test.it.Fibonacci.cvx  test.it.files.cvx  test.it.range.cvx  test.string.cvx  test.string.format.cvx
cmplFile/: SciTEDirectory.properties  lib.ci  lib.cmpl
cmplFile/lib/: FileStream.ci  FileStream.cmpl
cmplFile/src/: file.c
cmplFile/test/: hello.world.cmpl  test.base64.ci  test.base64.cmpl
cmplGL/: SciTEDirectory.properties
cmplGL/src/: openGL.c
cmplGL/test/: gl.triangle.ci  test.ci  testGL.ci
cmplGfx/: SciTEDirectory.properties  gfxlib.ci  lib.ci  lib.cmpl
cmplGfx/lib/: camera.ci  color.ci  color.cmpl  color.hsl.ci  color.lookup.ci  color.matrix.ci  color.ops.ci  draw.ci  draw.cmpl  gfxlib.ci  image.blend.ci  image.blur.ci  image.ci  image.cmpl  image.copy.ci  image.draw.ci  image.draw.line.ci  image.draw.oval.ci  image.draw.rect.ci  image.draw.rrect.ci  image.fill.ci  image.transform.ci  mesh.ci  micro.ui.ci  micro.ui.core.ci  rect.ci  rect.cmpl  rgb.ci  window.ci
cmplGfx/src/: g2_draw.c  g2_image.c  g3_draw.c  (+12 more)
cmplStd/: lib.ci  lib.cmpl  stdlib.ci
extras/: BuildLinux.sh  BuildMacOs.sh  BuildWindows.bat  Cmpl.api  Cmpl.g4  Cmpl.md  CmplBuild.Linux.sh  CmplBuild.Macos.sh  CmplBuild.Windows.bat  CmplDiffTest.sh  SciTECimpl.properties  SciTECmpl.properties  cmpl.api  test.all.bat  test.all.sh  test.linux.sh  test.macos.sh  test.todo.ci  test.windows.bat
gx/: 2d.bezier.gxc  3d.ripples.f32.gxc  3d.ripples.gxc  3d.ripples.i32.gxc  3d.ripples2.gxc  GameOfLife.gxc  SciTEDirectory.properties  app.ini  biorythm.gxc  empty.gxc  fx.Blur.gxc  fx.Dithering.gxc  gfx.cmd  gfx.sh  planeDeform.gxc  ripples.gxc  test.2d.gxc  test.3d.gxc  test.all.cmd  test.all.sh  test.fx.gxc  test.gxc  test.pd.gxc  tests.sh
include/: cmpl.h
lib/: gfxlib.ci  math.Complex.ci  math.ci  stdlib.ci  string.ci
libGfx/: SciTEDirectory.properties  gfxlib.ci  gfxlib.color.ci  gfxlib.mat4f.ci  gfxlib.vec2d.ci  gfxlib.vec4f.ci
plugins/: file.c
src/: Makefile  ccCore.h  cgen.c  cimpl.h  cmpl.h  cmplCc.h  cmplDbg.h  cmplVm.h  code.c  code.h  code.i  code.inl  codeEmit.c  codeExec.c  codeFold.c  codeGen.c  compiler.c  compiler.h  core.c  debuger.c  debuger.h  defs.inl  exec.i  internal.h  lexer.c  lexer.h  lstd.c  main.c  parser.c  parser.h  platform.c  plugin.c  printer.c  printer.h  token.i  tree.c  tree.h  type.c  type.h  typeCheck.c  (+5 more)
src.ext/: file.c
test/: lang.array.ci  lang.initArray.ci  lang.initByRef.ci  lang.initFields.ci  lang.initRecord.ci  lang.inlineEmit.ci  lang.inlineMacros.ci  lang.method.ci  lang.recPacking.ci  lang.record.ci  lang.statementFor.ci  lang.statementIf.ci  lang.varInitArray.ci  lang.varInitAssign.ci  lang.varInitByRef.ci  lang.varInitByVal.ci  stdc.execute.ci  stdc.memory.ci  stdc.nfcTryExec.ci  test.all.bat  test.all.sh  test.ci  test.inlineOverload.ci  todo.functionUFCS.ci  todo.operator.ci
tests/: SciTEDirectory.properties  emit.values.ci  lang.function.ci  lang.inline.ci  lang.operator.ci  lang.statement.ci  lang.varInitArray.ci  lang.varInitLocalStatic.ci  lang.varInitObject.ci  lang.varInitRefVarPtr.ci  stdc.functions.ci  stdc.memory.ci  stdc.raise.ci  todo.lang.ci
tools/: _clean.bat  _clean.sh  _zip.bat  _zip.sh
(+823 files in other folders)
